--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     </div>
     <div class="game_modes">
         <div class="container">
-            <div class="row mt-5">
+            <div class="row mt-5 justify-content-around ">
                 <div class="col-5">
                     <div class="text-center ">
                         <div class="position-relative ">
